# securityscout

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  compose.prod.yaml  docker-compose.yml  pyproject.toml  repos.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
alembic/: env.py
alembic/versions/: a41027ef13ac_phase1_initial_models.py  b8c3d9e1f2a4_add_finding_cve_id.py  c5f2a1d8e930_add_triage_accuracy.py  d7e4f2a3b5c6_add_finding_poc_patch_fields.py  e8a1c2d3f4b5_add_finding_repo_name.py  f1e2d3c4b5a6_add_ux_findings_advisory_ghsa.py  g8h9i0j1k2l3_add_workflow_runs_advisory_ghsa_id.py
scripts/: test_webhook.py
src/: db.py  exceptions.py  main.py  mcp_readonly.py  models.py  run_worker.py  worker.py
src/agents/: __init__.py  approval.py  dedup.py  env_builder.py  governance.py  orchestrator.py  patch_oracle.py  sandbox_executor.py  triage.py  workflow_slack_handlers.py
src/agents/orchestrator/: __init__.py  _constants.py  _logging.py  _workflow_helpers.py  advisory_governance.py  advisory_preflight.py  advisory_triage.py  bootstrap.py  deps.py  params.py  pipeline.py  reporting.py  sandbox_path.py  sandbox_phase.py  workflow_run.py
src/ai/: __init__.py  anthropic_provider.py  external_content_prompts.py  provider.py
src/config/: __init__.py
src/tools/: advisory_polling.py  circuit_breaker.py  docker_sandbox.py  github.py  input_sanitiser.py  issue_tracker.py  json_predicate.py  nuclei.py  ops_alerts.py  osv.py  poc_preflight.py  rate_limiter.py  slack.py  source_ref_repo.py
src/tools/scm/: __init__.py  github.py  models.py  protocol.py
src/webhooks/: __init__.py  github.py  slack.py
src/webhooks/scm/: __init__.py  github.py  protocol.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_mcp_readonly.py  test_models.py  test_run_worker.py  test_smoke.py  test_worker.py
tests/agents/: test_approval.py  test_dedup.py  test_env_builder.py  test_governance.py  test_orchestrator.py  test_orchestrator_errors.py  test_orchestrator_preflight.py  test_orchestrator_rate_limiter.py  test_orchestrator_resume.py  test_orchestrator_sandbox.py  test_patch_oracle.py  test_sandbox_executor.py  test_triage.py  test_triage_coverage.py  test_workflow_slack_handlers.py
tests/ai/: test_anthropic_provider.py  test_provider.py
tests/integration/: test_advisory_pipeline.py  test_slack_approval_governance_mcp.py  test_slack_webhook_e2e.py
tests/tools/: test_advisory_polling.py  test_advisory_polling_sync.py  test_circuit_breaker.py  test_github_client.py  test_github_coverage.py  test_github_exceptions.py  test_input_sanitiser.py  test_issue_tracker.py  test_json_predicate.py  test_nuclei.py  test_ops_alerts.py  test_osv.py  test_poc_preflight.py  test_rate_limiter.py  test_slack.py  test_source_ref_repo.py
tests/tools/scm/: test_clone_sha.py  test_github.py  test_github_scm_provider.py  test_protocol.py
tests/webhooks/: test_github_webhook.py  test_slack_webhook.py
tests/webhooks/scm/: test_webhook_provider.py
